--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <body>
 
 <div class="login-box">
-  <h2>تسجيل دخول أعضاء منظمة اترك أثر</h2>
+  <h2> تسجيل دخول الأعضاء </h2>
 
   <div class="input-group">
     <input type="email" id="email" placeholder="الإيدي (البريد الإلكتروني)">
